get post with tags, edit post with tags